# OpenSplat

./: CMakeLists.txt  Dockerfile.rocm7.2  input_data.cpp  input_data.hpp  rosbag.cpp  rosbag.hpp
.github/workflows/: rocm7.2.yml  ubuntu-jazzy.yml  ubuntu.yml  windows.yml
ros2/: README.md
ros2/src/opensplat_live_evaluation/: CMakeLists.txt  package.xml
ros2/src/opensplat_live_evaluation/src/: evaluation_node.cpp
ros2/src/opensplat_live_interfaces/: CMakeLists.txt  package.xml
ros2/src/opensplat_live_interfaces/msg/: GaussianStats.msg  Keyframe.msg  LiveFrame.msg  MapUpdateStats.msg  TrackingStatus.msg
ros2/src/opensplat_live_interfaces/srv/: ResetMap.srv  SaveMap.srv  SetMapperMode.srv  TriggerRefinement.srv
ros2/src/opensplat_live_mapper/: CMakeLists.txt  package.xml
ros2/src/opensplat_live_mapper/include/opensplat_live_mapper/: gaussian_merger.hpp  gaussian_pruner.hpp  gaussian_scheduler.hpp  gaussian_spawner.hpp  keyframe_manager.hpp  live_gaussian_map.hpp  local_optimizer.hpp  map_exporter.hpp  spatial_bucket_index.hpp
ros2/src/opensplat_live_mapper/src/: gaussian_merger.cpp  gaussian_pruner.cpp  gaussian_scheduler.cpp  gaussian_spawner.cpp  keyframe_manager.cpp  live_gaussian_map.cpp  live_mapper_node.cpp  local_optimizer.cpp  map_exporter.cpp  spatial_bucket_index.cpp
ros2/src/opensplat_live_viewer_bridge/: CMakeLists.txt  package.xml
ros2/src/opensplat_live_viewer_bridge/src/: viewer_bridge_node.cpp
ros2/src/opensplat_tracking_frontend/: CMakeLists.txt  package.xml
ros2/src/opensplat_tracking_frontend/src/: tracking_frontend_node.cpp
