<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opensplat_live_mapper</name>
  <version>0.1.0</version>
  <description>
    Live streaming Gaussian map backend for OpenSplat, built on ROS 2 Jazzy.
    Implements LiveGaussianMap, SpatialBucketIndex, GaussianSpawner,
    GaussianScheduler, GaussianPruner, GaussianMerger, LocalOptimizer
    and MapExporter as described in the RTG-SLAM-inspired design spec.
  </description>
  <maintainer email="opensplat@example.com">OpenSplat</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opensplat_live_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
