<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opensplat_live_viewer_bridge</name>
  <version>0.1.0</version>
  <description>
    Viewer and debugging bridge for the OpenSplat live Gaussian mapper.
    Publishes RViz-compatible markers, camera trajectory, local map bounding
    boxes, and down-sampled Gaussian point clouds.  Optionally streams to Rerun.
  </description>
  <maintainer email="opensplat@example.com">OpenSplat</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opensplat_live_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
