<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opensplat_tracking_frontend</name>
  <version>0.1.0</version>
  <description>
    RGB-D odometry tracking frontend for the OpenSplat live Gaussian mapper.
    Produces camera poses, tracking confidence and keyframe candidate events.
    Designed as a swappable module so alternative frontends (ORB-SLAM3,
    DROID-SLAM, GICP) can be substituted without touching the mapper backend.
  </description>
  <maintainer email="opensplat@example.com">OpenSplat</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>opensplat_live_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
